--- a/MotoActions/res/values/strings.xml
+++ b/MotoActions/res/values/strings.xml
@@ -190,5 +190,35 @@
     <string name="ambient_display_summary_on">Screen will wake when you receive notifications</string>
     <string name="ambient_display_summary_off">Screen will not wake when you receive notifications</string>
 
+    <!-- Hand wave gesture -->
+    <string name="hand_wave_gesture_title">Hand wave</string>
+    <string name="hand_wave_gesture_summary">Pulse notifications on hand wave</string>
+    <string name="hand_wave_gesture_flat_title">Detect orientation</string>
+    <string name="hand_wave_gesture_flat_summary">Pulse only if the phone is lying face up on a flat surface</string>
+
+    <!-- Flip to mute gesture -->
+    <string name="flip_to_mute_title">Flip for Do Not Disturb</string>
+    <string name="flip_to_mute_summary">Place the phone face down to silence notifications and calls</string>
+
+    <!-- Camera gesture -->
+    <string name="camera_gesture_title">Double-twist</string>
+    <string name="camera_gesture_summary">Open camera when using the double twist gesture</string>
+
+    <!-- Hand wave silencer gesture -->
+    <string name="hand_wave_silencer_title">Wave to silence</string>
+    <string name="hand_wave_silencer_summary">Silence incoming calls by waving your hand across the screen</string>
+
+    <!-- Lift to silence gesture -->
+    <string name="lift_to_silence_title">Pick up to stop ringing</string>
+    <string name="lift_to_silence_summary">Lift the phone to silence incoming calls. It only works when your phone starts flat</string>
+
+    <!-- Pick-up gesture -->
+    <string name="pick_up_gesture_title">Pick-up</string>
+    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>
+
+    <!-- Chop-chop gesture -->
+    <string name="chop_chop_gesture_title">Chop-chop</string>
+    <string name="chop_chop_gesture_summary">Toggle flashlight when using the chop-chop gesture</string>
+
 </resources>
 
